--- a/reference.bib
+++ b/reference.bib
@@ -29,13 +29,13 @@
 @String { TVCG     = {IEEE. T. Vis. Comput. Gr.} }
 
 
+
 @inproceedings{Achlioptas2018,
   author    = {Panos Achlioptas and Olga Diamanti and Ioannis Mitliagkas and Leonidas Guibas},
   title     = {Learning representations and generative models for {3D} point clouds},
   booktitle = ICML,
   year      = {2018}
 }
-
 
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
@@ -45,7 +45,6 @@
   volume  = {28},
   number  = {3}
 }
-
 
 
 @article{Adams2010,
@@ -66,6 +65,7 @@
 }
 
 
+
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
   author  = {Adikusuma, Yohanes Yudhi and Fang, Zheng and He, Ying},
@@ -84,13 +84,13 @@
 }
 
 
-
 @inproceedings{Alayrac2020,
   title     = {Self-Supervised MultiModal Versatile Networks},
   author    = {Alayrac, Jean-Baptiste and Recasens, Adria and Schneider, Rosalia and Arandjelovic, Relja and Ramapuram, Jason and De Fauw, Jeffrey and Smaira, Lucas and Dieleman, Sander and Zisserman, Andrew},
   booktitle = NeurIPS,
   year      = {2020}
 }
+
 
 @article{Alhashim2012,
   author  = {Alhashim, Ibraheem and Zhang, Hao and Liu, Ligang},
@@ -102,13 +102,13 @@
 }
 
 
+
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
-
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -177,6 +177,7 @@
   year      = {2020}
 }
 
+
 @inproceedings{Atzmon2021,
   title     = {{SALD}: Sign Agnostic Learning with Derivatives},
   author    = {Atzmon, Matan and Lipman, Yaron},
@@ -193,7 +194,6 @@
   volume  = {18},
   number  = {7}
 }
-
 
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
@@ -212,6 +212,7 @@
   year    = {2016}
 }
 
+
 @article{Badrinarayanan2017,
   author  = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
   title   = {Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
@@ -228,7 +229,6 @@
   publisher = {Citeseer}
 }
 
-
 @inproceedings{Bai2016,
   author    = {Song Bai and Xiang Bai and Zhichao Zhou and Zhaoxiang Zhang and Longin Jan Latecki},
   title     = {GIFT: A real-time and scalable {3D} shape search engine},
@@ -243,6 +243,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @article{Bailey2018,
   author  = {Bailey, Stephen W. and Otte, Dave and Dilorenzo, Paul and O'Brien, James F.},
@@ -262,7 +263,6 @@
   number  = {4},
   year    = {2020}
 }
-
 
 @article{Bajaj2003,
   author  = {Bajaj, Chandrajit L. and Xu, Guoliang},
@@ -289,6 +289,7 @@
   year      = {2019}
 }
 
+
 @article{Belongie2002,
   title   = {Shape matching and object recognition using shape contexts},
   author  = {Belongie, Serge and Malik, Jitendra and Puzicha, Jan},
@@ -306,7 +307,6 @@
   volume  = {35},
   number  = {8}
 }
-
 
 @article{Berger2017,
   author  = {Berger, Matthew and Tagliasacchi, Andrea and Seversky, Lee M. and Alliez, Pierre and Guennebaud, Ga\"{e}l and Levine, Joshua A. and Sharf, Andrei and Silva, Claudio T.},
@@ -327,6 +327,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Bogo2014,
   title     = {{FAUST}: Dataset and evaluation for {3D} mesh registration},
   author    = {Bogo, Federica and Romero, Javier and Loper, Matthew and Black, Michael J},
@@ -341,7 +342,6 @@
   booktitle = CVPR,
   year      = {2017}
 }
-
 
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
@@ -400,6 +400,7 @@
   number  = {1}
 }
 
+
 @book{Botsch2010,
   title  = {Polygon Mesh Processing},
   year   = {2010},
@@ -416,13 +417,13 @@
   number  = {5}
 }
 
-
 @inproceedings{Boyer2011,
   author    = {Boyer, E. and Bronstein, A. M. and Bronstein, M. M. and Bustos, B. and Darom, T. and Horaud, R. and Hotz, I. and Keller, Y. and Keustermans, J. and Kovnatsky, A. and Litman, R. and Reininghaus, J. and Sipiran, I. and Smeets, D. and Suetens, P. and Vandermeulen, D. and Zaharescu, A. and Zobel, V.},
   title     = {{SHREC 2011}: Robust feature detection and description benchmark},
   booktitle = {Proc. of the 4th Eurographics Conference on 3D Object Retrieval},
   year      = {2011}
 }
+
 
 @book{Bridson2015,
   title     = {Fluid simulation for computer graphics},
@@ -431,13 +432,13 @@
   publisher = {CRC press}
 }
 
+
 @inproceedings{Brock2016,
   author    = {Andrew Brock and Theodore Lim and J.M. Ritchie and Nick Weston},
   title     = {Generative and discriminative voxel modeling with convolutional neural networks},
   booktitle = {3D deep learning workshop (NeurIPS)},
   year      = {2016}
 }
-
 
 @article{Bronstein2017,
   author  = {M. M. Bronstein and J. Bruna and Y. LeCun and A. Szlam and P. Vandergheynst},
@@ -469,6 +470,7 @@
   year      = {2012}
 }
 
+
 @article{Calakli2011,
   author  = {Calakli, Fatih and Taubin, Gabriel},
   title   = {{SSD}: Smooth signed distance surface reconstruction},
@@ -477,7 +479,6 @@
   volume  = {30},
   number  = {7}
 }
-
 
 @article{Canas2006,
   author  = {Ca\~{n}as, Guillermo D. and Gortler, Steven J.},
@@ -488,7 +489,6 @@
   number  = {9-11}
 }
 
-
 @article{Cao2014,
   author  = {Cao, Chen and Hou, Qiming and Zhou, Kun},
   title   = {Displaced dynamic expression regression for real-time facial tracking and animation},
@@ -498,12 +498,14 @@
   number  = {4}
 }
 
+
 @inproceedings{Cao2018,
   author    = {Cao, Yan-Pei and Liu, Zheng-Ning and Kuang, Zheng-Fei and Kobbelt, Leif and Hu, Shi-Min},
   title     = {Learning to reconstruct high-quality {3D} shapes with cascaded fully convolutional networks},
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
@@ -581,7 +583,6 @@
   number  = {4}
 }
 
-
 @inproceedings{Chen2019,
   title     = {Learning implicit fields for generative shape modeling},
   author    = {Chen, Zhiqin and Zhang, Hao},
@@ -595,6 +596,7 @@
   booktitle = ICCV,
   year      = {2019}
 }
+
 
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
@@ -631,6 +633,13 @@
   year      = {2021}
 }
 
+@inproceedings{Cheng2022,
+  title     = {{PatchFormer}: A versatile {3D} transformer based on patch attention},
+  author    = {Cheng, Zhang and Wan, Haocheng and Shen, Xinyi and Wu, Zizhao},
+  booktitle = CVPR,
+  year      = {2021}
+}
+
 @inproceedings{Chiang2019,
   title     = {A unified point-based framework for {3D} segmentation},
   author    = {Chiang, Hung-Yueh and Lin, Yen-Liang and Liu, Yueh-Cheng and Hsu, Winston H},
@@ -654,13 +663,13 @@
   number  = {4}
 }
 
-
 @inproceedings{Choy2016,
   author    = {Choy, Christopher and Xu, Danfei and Gwak, JunYoung and Chen, Kevin and Savarese, Silvio},
   title     = {{3D-R2N2}: A unified approach for single and multi-view {3D} object reconstruction},
   booktitle = ECCV,
   year      = {2016}
 }
+
 
 @inproceedings{Choy2019,
   author    = {Choy, Christopher and Gwak, JunYoung and Savarese, Silvio},
@@ -685,7 +694,6 @@
   number  = {4}
 }
 
-
 @article{Cignoni1998,
   author  = {P. Cignoni and C. Rocchini and R. Scopigno},
   title   = {Metro: measuring error on simplified surfaces},
@@ -694,6 +702,7 @@
   volume  = {17},
   number  = {2}
 }
+
 
 @inproceedings{Clarenz2000,
   author    = {Clarenz, Ulrich and Diewald, Udo and Rumpf, Martin},
@@ -861,13 +870,13 @@
   year      = {2014}
 }
 
-
 @inproceedings{Dosovitskiy2021,
   title     = {An image is worth 16x16 words: Transformers for image recognition at scale},
   author    = {Dosovitskiy, Alexey and Beyer, Lucas and Kolesnikov, Alexander and Weissenborn, Dirk and Zhai, Xiaohua and Unterthiner, Thomas and Dehghani, Mostafa and Minderer, Matthias and Heigold, Georg and Gelly, Sylvain and others},
   booktitle = ICLR,
   year      = {2021}
 }
+
 
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
@@ -903,7 +912,6 @@
   number  = {5}
 }
 
-
 @article{Engel2021,
   title   = {Point transformer},
   author  = {Engel, Nico and Belagiannis, Vasileios and Dietmayer, Klaus},
@@ -919,6 +927,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
@@ -938,13 +947,13 @@
   number  = {2}
 }
 
-
 @inproceedings{Fan2017,
   author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
   title     = {A point set generation network for {3D} object reconstruction from a single image},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Fan2022,
   title     = {Embracing single stride {3D} object detector with sparse transformer},
@@ -960,7 +969,6 @@
   year      = {2014}
 }
 
-
 @inproceedings{Fey2018,
   title     = {{SplineCNN}: Fast Geometric Deep Learning with Continuous {B}-Spline Kernels},
   author    = {Fey, Matthias and Lenssen, Jan Eric and Weichert, Frank and M{\"u}ller, Heinrich},
@@ -975,6 +983,7 @@
   booktitle = {ICLR Workshop},
   year      = {2019}
 }
+
 
 @inproceedings{Firman2016,
   author    = {Michael Firman and Oisin Mac Aodha and Simon Julier and Gabriel J. Brostow},
@@ -1179,7 +1188,6 @@
   year      = {2018}
 }
 
-
 @misc{Guo2019,
   author        = {Yulan Guo and Hanyun Wang and Qingyong Hu and Hao Liu and Li Liu and Mohammed Bennamoun},
   title         = {Deep learning for {3D} point clouds: A survey},
@@ -1206,6 +1214,7 @@
   title     = {Cross modal distillation for supervision transfer},
   year      = {2016}
 }
+
 
 @inproceedings{Guskov1999,
   author    = {Guskov, Igor and Sweldens, Wim and Schr\"{o}der, Peter},
@@ -1331,7 +1340,6 @@
   year      = {2020}
 }
 
-
 @article{He2013,
   author  = {He, Lei and Schaefer, Scott},
   title   = {Mesh denoising via $L_0$ minimization},
@@ -1348,6 +1356,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @inproceedings{He2016a,
   author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
@@ -1402,7 +1411,6 @@
   year    = {2006}
 }
 
-
 @inproceedings{Hou2021,
   title     = {Exploring Data-Efficient {3D} Scene Understanding with Contrastive Scene Contexts},
   author    = {Hou, Ji and Graham, Benjamin and Nie{\ss}ner, Matthias and Saining Xie},
@@ -1419,6 +1427,7 @@
   volume  = {31},
   number  = {5}
 }
+
 
 @inproceedings{Hu2019,
   title   = {{RandLA-Net}: Efficient Semantic Segmentation of Large-Scale Point Clouds},
@@ -1598,13 +1607,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Kaczmarski2013,
   author    = {Kaczmarski, Krzysztof and Rzazewski, Pawel},
   title     = {Thrust and {CUDA} in data intensive algorithms},
   booktitle = {New Trends in Databases and Information Systems},
   year      = {2013}
 }
+
 
 @article{Kaick2011,
   author  = {Oliver van Kaick and Hao Zhang and Ghassan Hamarneh and Daniel Cohen-Or},
@@ -2018,7 +2027,6 @@
   number  = {5}
 }
 
-
 @inproceedings{Lin2018,
   author       = {Lin, Chen-Hsuan and Kong, Chen and Lucey, Simon},
   title        = {Learning efficient point cloud generation for dense {3D} object reconstruction},
@@ -2026,6 +2034,7 @@
   year         = {2018},
   howpublished = {arXiv:1706.07036 [cs.CV]}
 }
+
 
 @inproceedings{Lipman2021,
   title     = {Phase Transitions, Distance Functions, and Implicit Neural Representations},
@@ -2092,13 +2101,13 @@
   year    = {2020}
 }
 
-
 @inproceedings{Liu2020b,
   title     = {A Closer Look at Local Aggregation Operators in Point Cloud Analysis},
   author    = {Liu, Ze and Hu, Han and Cao, Yue and Zhang, Zheng and Tong, Xin},
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @article{Liu2021,
   title   = {{OctSurf}: Efficient hierarchical voxel-based molecular surface representation for protein-ligand affinity prediction},
@@ -2108,10 +2117,10 @@
 }
 
 @inproceedings{Liu2021a,
-  title        = {Swin transformer: Hierarchical vision transformer using shifted windows},
-  author       = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
+  title     = {Swin transformer: Hierarchical vision transformer using shifted windows},
+  author    = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
   booktitle = ICCV,
-  year         = {2021}
+  year      = {2021}
 }
 
 @inproceedings{Liu2021b,
@@ -2121,13 +2130,13 @@
   year      = {2021}
 }
 
-
 @inproceedings{Liu2021c,
   title     = {Contrastive Multimodal Fusion with {TupleInfoNCE}},
   author    = {Liu, Yunze and Fan, Qingnan and Zhang, Shanghang and Dong, Hao and Funkhouser, Thomas and Yi, Li},
   booktitle = ICCV,
   year      = {2021}
 }
+
 
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
@@ -2142,7 +2151,6 @@
   booktitle = ICCV,
   year      = {2021}
 }
-
 
 @inproceedings{Loffe2015,
   author    = {Loffe, Sergey and Szegedy, Christian},
@@ -2159,6 +2167,7 @@
   publisher = {Nelson Education}
 }
 
+
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
   title     = {Fully convolutional models for semantic segmentation},
@@ -2166,13 +2175,13 @@
   year      = {2015}
 }
 
-
 @inproceedings{Lorensen1987,
   author    = {Lorensen, William E. and Cline, Harvey E.},
   title     = {{Marching Cubes}: A High Resolution {3D} Surface Construction Algorithm},
   booktitle = {SIGGRAPH},
   year      = {1987}
 }
+
 
 @inproceedings{Lowe1989,
   author    = {Lowe, David},
@@ -2190,13 +2199,13 @@
   number  = {3}
 }
 
-
 @inproceedings{Lun2017,
   author    = {Zhaoliang Lun and Matheus Gadelha and Evangelos Kalogerakis and Subhransu Maji and Rui Wang},
   title     = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
   booktitle = threeDV,
   year      = {2017}
 }
+
 
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
@@ -2506,6 +2515,13 @@
   author    = {Pan, Xuran and Xia, Zhuofan and Song, Shiji and Li, Li Erran and Huang, Gao},
   booktitle = CVPR,
   year      = {2021}
+}
+
+@inproceedings{Pang2022,
+  title     = {Masked autoencoders for point cloud self-supervised learning},
+  author    = {Pang, Yatian and Wang, Wenxiao and Tay, Francis EH and Liu, Wei and Tian, Yonghong and Yuan, Li},
+  booktitle = ECCV,
+  year      = {2022}
 }
 
 @article{Panozzo2013,
@@ -3748,17 +3764,17 @@
 }
 
 @inproceedings{Wu2021,
-  title   = {{CvT}: Introducing convolutions to vision transformers},
-  author  = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
+  title     = {{CvT}: Introducing convolutions to vision transformers},
+  author    = {Wu, Haiping and Xiao, Bin and Codella, Noel and Liu, Mengchen and Dai, Xiyang and Yuan, Lu and Zhang, Lei},
   booktitle = ICCV,
-  year    = {2021}
+  year      = {2021}
 }
 
 @inproceedings{Wu2022,
-  title   = {Point Transformer V2: Grouped Vector Attention and Partition-based Pooling},
-  author  = {Wu, Xiaoyang and Lao, Yixing and Jiang, Li and Liu, Xihui and Zhao, Hengshuang},
+  title     = {Point Transformer V2: Grouped Vector Attention and Partition-based Pooling},
+  author    = {Wu, Xiaoyang and Lao, Yixing and Jiang, Li and Liu, Xihui and Zhao, Hengshuang},
   booktitle = NeurIPS,
-  year    = {2022}
+  year      = {2022}
 }
 
 @article{Xia2021,
@@ -3769,10 +3785,10 @@
 }
 
 @inproceedings{Xiao2021,
-  title   = {Early convolutions help transformers see better},
-  author  = {Xiao, Tete and Singh, Mannat and Mintun, Eric and Darrell, Trevor and Doll{\'a}r, Piotr and Girshick, Ross},
+  title     = {Early convolutions help transformers see better},
+  author    = {Xiao, Tete and Singh, Mannat and Mintun, Eric and Darrell, Trevor and Doll{\'a}r, Piotr and Girshick, Ross},
   booktitle = NeurIPS,
-  year    = {2021}
+  year      = {2021}
 }
 
 @article{Xie2015,
