--- a/reference.bib
+++ b/reference.bib
@@ -65,7 +65,6 @@
 }
 
 
-
 @article{Adikusuma2020,
   title   = {Fast construction of discrete geodesic graphs},
   author  = {Adikusuma, Yohanes Yudhi and Fang, Zheng and He, Ying},
@@ -102,13 +101,13 @@
 }
 
 
-
 @inproceedings{Andersen2009,
   author    = {Andersen, Vedrana and Desbrun, Mathieu and B{\ae}rentzen, J. Andreas and Aan{\ae}s, Henrik},
   title     = {Height and tilt geometric texture},
   booktitle = {Proc. of the 5th International Symposium on Advances in Visual Computing: Part I},
   year      = {2009}
 }
+
 
 @inproceedings{Ankerst1999,
   author    = {Ankerst, Mihael and Kastenm{\"u}ller, Gabiand Kriegel, Hans-Peter and Seidl, Thomas},
@@ -195,6 +194,7 @@
   number  = {7}
 }
 
+
 @inproceedings{Aubry2011,
   author    = {Aubry, Mathieu and Schlickewei, Ulrich and Cremers, Daniel},
   booktitle = {ICCV Workshop},
@@ -228,6 +228,7 @@
   author    = {B{\ae}rentzen, J Andreas},
   publisher = {Citeseer}
 }
+
 
 @inproceedings{Bai2016,
   author    = {Song Bai and Xiang Bai and Zhichao Zhou and Zhaoxiang Zhang and Longin Jan Latecki},
@@ -263,6 +264,7 @@
   number  = {4},
   year    = {2020}
 }
+
 
 @article{Bajaj2003,
   author  = {Bajaj, Chandrajit L. and Xu, Guoliang},
@@ -308,6 +310,7 @@
   number  = {8}
 }
 
+
 @article{Berger2017,
   author  = {Berger, Matthew and Tagliasacchi, Andrea and Seversky, Lee M. and Alliez, Pierre and Guennebaud, Ga\"{e}l and Levine, Joshua A. and Sharf, Andrei and Silva, Claudio T.},
   title   = {A survey of surface reconstruction from point clouds},
@@ -335,13 +338,13 @@
   year      = {2014}
 }
 
-
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
   author    = {Bogo, Federica and Romero, Javier and Pons-Moll, Gerard and Black, Michael J},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @article{Bommes2009,
   author  = {Bommes, David and Zimmer, Henrik and Kobbelt, Leif},
@@ -371,7 +374,6 @@
   volume  = {32},
   number  = {6}
 }
-
 
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
@@ -417,6 +419,7 @@
   number  = {5}
 }
 
+
 @inproceedings{Boyer2011,
   author    = {Boyer, E. and Bronstein, A. M. and Bronstein, M. M. and Bustos, B. and Darom, T. and Horaud, R. and Hotz, I. and Keller, Y. and Keustermans, J. and Kovnatsky, A. and Litman, R. and Reininghaus, J. and Sipiran, I. and Smeets, D. and Suetens, P. and Vandermeulen, D. and Zaharescu, A. and Zobel, V.},
   title     = {{SHREC 2011}: Robust feature detection and description benchmark},
@@ -447,6 +450,7 @@
   year    = {2017}
 }
 
+
 @inproceedings{Brown2020,
   title     = {Language models are few-shot learners},
   author    = {Brown, Tom B and Mann, Benjamin and Ryder, Nick and Subbiah, Melanie and Kaplan, Jared and Dhariwal, Prafulla and Neelakantan, Arvind and Shyam, Pranav and Sastry, Girish and Askell, Amanda and others},
@@ -470,7 +474,6 @@
   year      = {2012}
 }
 
-
 @article{Calakli2011,
   author  = {Calakli, Fatih and Taubin, Gabriel},
   title   = {{SSD}: Smooth signed distance surface reconstruction},
@@ -479,6 +482,7 @@
   volume  = {30},
   number  = {7}
 }
+
 
 @article{Canas2006,
   author  = {Ca\~{n}as, Guillermo D. and Gortler, Steven J.},
@@ -506,7 +510,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Caron2018,
   author    = {Caron, Mathilde and Bojanowski, Piotr and Joulin, Armand and Douze, Matthijs},
   title     = {Deep clustering for unsupervised learning of visual features},
@@ -521,12 +524,14 @@
   year      = {2020}
 }
 
+
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
   author  = {Chang, Angel X. and Funkhouser, Thomas and Guibas, Leonidas and Hanrahan, Pat and Huang, Qixing and Li, Zimo and Savarese, Silvio and Savva, Manolis and Song, Shuran and Su, Hao and Xiao, Jianxiong and Yi, Li and Yu, Fisher},
   journal = {arXiv preprint arXiv:1512.03012},
   year    = {2015}
 }
+
 
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
@@ -597,7 +602,6 @@
   year      = {2019}
 }
 
-
 @inproceedings{Chen2020,
   title     = {A simple framework for contrastive learning of visual representations},
   author    = {Chen, Ting and Kornblith, Simon and Norouzi, Mohammad and Hinton, Geoffrey},
@@ -618,6 +622,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
@@ -670,7 +675,6 @@
   year      = {2016}
 }
 
-
 @inproceedings{Choy2019,
   author    = {Choy, Christopher and Gwak, JunYoung and Savarese, Silvio},
   title     = {{4D} spatio-temporal convnets: {Minkowski} convolutional neural networks},
@@ -684,6 +688,14 @@
   journal = {arXiv preprint arXiv:2102.10882},
   year    = {2021}
 }
+
+@inproceedings{Chu2021a,
+  author    = {Chu, Xiangxiang and Tian, Zhi and Wang, Yuqing and Zhang, Bo and Ren, Haibing and Wei, Xiaolin and Xia, Huaxia and Shen, Chunhua},
+  booktitle = NeurIPS,
+  title     = {Twins: Revisiting the Design of Spatial Attention in Vision Transformers},
+  year      = {2021}
+}
+
 
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
@@ -703,7 +715,6 @@
   number  = {2}
 }
 
-
 @inproceedings{Clarenz2000,
   author    = {Clarenz, Ulrich and Diewald, Udo and Rumpf, Martin},
   title     = {Anisotropic geometric diffusion in surface processing},
@@ -717,6 +728,7 @@
   journal = {arXiv preprint arXiv:1801.10130},
   year    = {2018}
 }
+
 
 @article{CohenSteiner2004,
   author  = {Cohen-Steiner, David and Alliez, Pierre and Desbrun, Mathieu},
@@ -863,6 +875,13 @@
   publiser  = {IEEE}
 }
 
+@inproceedings{Dong2022,
+  title     = {{CSWin Transformer}: A general vision transformer backbone with cross-shaped windows},
+  author    = {Dong, Xiaoyi and Bao, Jianmin and Chen, Dongdong and Zhang, Weiming and Yu, Nenghai and Yuan, Lu and Chen, Dong and Guo, Baining},
+  booktitle = CVPR,
+  year      = {2022}
+}
+
 @inproceedings{Dosovitskiy2014,
   title     = {Discriminative unsupervised feature learning with convolutional neural networks},
   author    = {Dosovitskiy, Alexey and Springenberg, Jost Tobias and Riedmiller, Martin and Brox, Thomas},
@@ -877,13 +896,13 @@
   year      = {2021}
 }
 
-
 @article{Du2018,
   author  = {Tao Du and Jeevana Priya Inala and Yewen Pu and Andrew Spielberg and Adriana Schulz and Daniela Rus and Armando Solar-Lezama and Wojciech Matusik},
   title   = {{InverseCSG}: Automatic conversion of {3D} models to {CSG} trees},
   journal = SA,
   year    = {2018}
 }
+
 
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
@@ -920,7 +939,6 @@
   year    = {2021}
 }
 
-
 @inproceedings{Engelmann2020,
   title     = {{3D-MPA}: Multi-proposal aggregation for {3D} semantic instance segmentation},
   author    = {Engelmann, Francis and Bokeloh, Martin and Fathi, Alireza and Leibe, Bastian and Nie{\ss}ner, Matthias},
@@ -938,6 +956,7 @@
   number  = {19}
 }
 
+
 @article{Fan2010,
   author  = {Hanqi Fan and Yizhou Yu and Qunsheng Peng},
   title   = {Robust feature-preserving mesh denoising based on consistent subneighborhoods},
@@ -954,13 +973,13 @@
   year      = {2017}
 }
 
-
 @inproceedings{Fan2022,
   title     = {Embracing single stride {3D} object detector with sparse transformer},
   author    = {Fan, Lue and Pang, Ziqi and Zhang, Tianyuan and Wang, Yu-Xiong and Zhao, Hang and Wang, Feng and Wang, Naiyan and Zhang, Zhaoxiang},
   booktitle = CVPR,
   year      = {2022}
 }
+
 
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
@@ -976,7 +995,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
   author    = {Fey, Matthias and Lenssen, Jan Eric},
@@ -991,6 +1009,7 @@
   booktitle = CVPR,
   year      = {2016}
 }
+
 
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
@@ -1197,7 +1216,6 @@
   primaryclass  = {cs.CV}
 }
 
-
 @article{Guo2021,
   title   = {{PCT}: Point cloud transformer},
   author  = {Guo, Meng-Hao and Cai, Jun-Xiong and Liu, Zheng-Ning and Mu, Tai-Jiang and Martin, Ralph R and Hu, Shi-Min},
@@ -1222,6 +1240,7 @@
   booktitle = {SIGGRAPH},
   year      = {1999}
 }
+
 
 @inproceedings{Gutmann2010,
   author    = {Gutmann, Michael and Hyv{\"a}rinen, Aapo},
@@ -1349,7 +1368,6 @@
   number  = {4}
 }
 
-
 @inproceedings{He2016,
   title     = {Deep residual learning for image recognition},
   author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
@@ -1364,6 +1382,7 @@
   title     = {Identity mappings in deep residual networks},
   year      = {2016}
 }
+
 
 @inproceedings{He2018,
   author    = {He, Xinwei and Zhou, Yang and Zhou, Zhichao and Bai, Song and Bai, Xiang},
@@ -1418,7 +1437,6 @@
   year      = {2021}
 }
 
-
 @article{Hu2012,
   author  = {Ruizhen Hu and Lubin Fan and Ligang Liu},
   title   = {Co-segmentation of {3D} shapes via subspace clustering},
@@ -1435,6 +1453,7 @@
   journal = CVPR,
   year    = {2020}
 }
+
 
 @inproceedings{Hu2020,
   title     = {{JSENet}: Joint semantic segmentation and edge detection network for 3d point clouds},
@@ -1614,7 +1633,6 @@
   year      = {2013}
 }
 
-
 @article{Kaick2011,
   author  = {Oliver van Kaick and Hao Zhang and Ghassan Hamarneh and Daniel Cohen-Or},
   title   = {A survey on shape correspondence},
@@ -1623,6 +1641,7 @@
   volume  = {30},
   number  = {6}
 }
+
 
 @article{Kaick2011a,
   author  = {Oliver van Kaick and Andrea Tagliasacchi and Oana Sidi and Hao Zhang and Daniel Cohen-Or and Lior Wolf and and Ghassan Hamarneh},
@@ -2035,13 +2054,13 @@
   howpublished = {arXiv:1706.07036 [cs.CV]}
 }
 
-
 @inproceedings{Lipman2021,
   title     = {Phase Transitions, Distance Functions, and Implicit Neural Representations},
   author    = {Lipman, Yaron},
   booktitle = ICML,
   year      = {2021}
 }
+
 
 @article{Liu2007,
   author  = {Ligang Liu and Chiew-Lan Tai and Zhongping Ji and Guojin Wang},
@@ -2108,13 +2127,13 @@
   year      = {2020}
 }
 
-
 @article{Liu2021,
   title   = {{OctSurf}: Efficient hierarchical voxel-based molecular surface representation for protein-ligand affinity prediction},
   journal = {Journal of Molecular Graphics and Modelling},
   year    = {2021},
   author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
 }
+
 
 @inproceedings{Liu2021a,
   title     = {Swin transformer: Hierarchical vision transformer using shifted windows},
@@ -2137,13 +2156,13 @@
   year      = {2021}
 }
 
-
 @article{Liu2021d,
   title   = {Self-supervised learning: Generative or contrastive},
   author  = {Liu, Xiao and Zhang, Fanjin and Hou, Zhenyu and Mian, Li and Wang, Zhaoyu and Zhang, Jing and Tang, Jie},
   journal = {IEEE Transactions on Knowledge and Data Engineering},
   year    = {2021}
 }
+
 
 @inproceedings{Liu2021e,
   author    = {Liu, Ze and Zhang, Zheng and Cao, Yue and Hu, Han and Tong, Xin},
@@ -2158,7 +2177,6 @@
   booktitle = ICML,
   year      = {2015}
 }
-
 
 @book{Logan2017,
   title     = {A first course in the finite element method},
@@ -2175,6 +2193,7 @@
   year      = {2015}
 }
 
+
 @inproceedings{Lorensen1987,
   author    = {Lorensen, William E. and Cline, Harvey E.},
   title     = {{Marching Cubes}: A High Resolution {3D} Surface Construction Algorithm},
@@ -2182,13 +2201,13 @@
   year      = {1987}
 }
 
-
 @inproceedings{Lowe1989,
   author    = {Lowe, David},
   title     = {Adaptive radial basis function nonlinearities, and the problem of generalisation},
   booktitle = {the 1st IEE International Conference on Artificial Neural Networks},
   year      = {1989}
 }
+
 
 @article{Lu2016,
   author  = {Xuequan Lu and Zhigang Deng and and Wenzhi Chen},
@@ -2206,13 +2225,13 @@
   year      = {2017}
 }
 
-
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
   journal = ThreeDV,
   year    = {2017}
 }
+
 
 @inproceedings{Lyu2020,
   author    = {Yecheng Lyu and Xinming Huang and Ziming Zhang},
@@ -2613,12 +2632,11 @@
 }
 
 @inproceedings{Qi2019,
-  author    = {Qi, Charles R. and Litany, Or and He, Kaiming and Guibas, Leonidas J},
+  author    = {Qi, Charles R. and Litany, Or and He, Kaiming and Guibas, Leonidas J.},
   title     = {Deep {Hough} Voting for {3D} Object Detection in Point Clouds},
   booktitle = CVPR,
   year      = {2019}
 }
-
 
 @article{Qin2016,
   title   = {Fast and exact discrete geodesic computation based on triangle-oriented wavefront propagation},
@@ -2628,6 +2646,7 @@
   number  = {4},
   year    = {2016}
 }
+
 
 @inproceedings{Radford2016,
   author    = {Alec Radford and Luke Metz and Soumith Chintala},
@@ -2642,7 +2661,6 @@
   title       = {Improving language understanding by generative pre-training},
   year        = {2018}
 }
-
 
 @article{Raffel2019,
   title   = {Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
@@ -2659,6 +2677,7 @@
   booktitle = ICML,
   year      = {2019}
 }
+
 
 @inproceedings{Rahimi2018,
   title     = {Random features for large-scale kernel machines},
@@ -2822,13 +2841,13 @@
   volume  = {13}
 }
 
-
 @inproceedings{Sauder2019,
   author    = {Jonathan Sauder and Bjarne Sievers},
   title     = {Self-supervised deep learning on point clouds by reconstructing space},
   booktitle = NeurIPS,
   year      = {2019}
 }
+
 
 @inproceedings{Savva2016,
   author    = {Savva, Manolis and Yu, Fisher and Su, Hao and Aono, M and Chen, B and Cohen-Or, D and Deng, W and Su, Hang and Bai, Song and Bai, Xiang and others},
@@ -2844,13 +2863,13 @@
   year      = {2004}
 }
 
-
 @inproceedings{Schelten2015,
   author    = {Schelten, K. and Nowozin, S. and Jancsary, J. and Rother, C. and Roth, S.},
   title     = {Interleaved regression tree field cascades for blind image deconvolution},
   booktitle = {Applications of Computer Vision (WACV)},
   year      = {2015}
 }
+
 
 @article{Schmidt2016,
   author  = {Schmidt, U. and Jancsary, J. and Nowozin, S. and Roth, S. and Rother, C.},
@@ -2910,7 +2929,6 @@
   year    = {2010}
 }
 
-
 @article{Sharf2004,
   author  = {Sharf, Andrei and Alexa, Marc and Cohen-Or, Daniel},
   title   = {Context-based Surface Completion},
@@ -2919,6 +2937,7 @@
   volume  = {23},
   number  = {3}
 }
+
 
 @article{Sharf2007,
   title   = {Interactive topology-aware surface reconstruction},
@@ -2936,13 +2955,13 @@
   year      = {2016}
 }
 
-
 @inproceedings{Sharma2018,
   author    = {Gopal Sharma and Rishabh Goyal and Difan Liu and Evangelos Kalogerakis and Subhransu Maji},
   title     = {{CSGNet}: Neural shape parser for constructive solid geometry},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @article{Sharma2018a,
   author  = {Sharma, Rishi and Barratt, Shane and Ermon, Stefano and Pande, Vijay},
@@ -3008,7 +3027,6 @@
   year    = {2019}
 }
 
-
 @article{Shu2016,
   author  = {Zhenyu Shu and Chengwu Qi and Shiqing Xin and Chao Hu and Li Wang and Yu Zhang and Ligang Liu},
   title   = {Unsupervised {3D} shape segmentation and co-segmentation via deep learning},
@@ -3027,6 +3045,7 @@
   number  = {6}
 }
 
+
 @inproceedings{Silva2002,
   author    = {Silva, Vin D and Tenenbaum, Joshua B},
   title     = {Global versus local methods in nonlinear dimensionality reduction},
@@ -3034,13 +3053,13 @@
   year      = {2002}
 }
 
-
 @inproceedings{Simonovsky2017,
   title     = {Dynamic edge-conditioned filters in convolutional neural networks on graphs},
   author    = {Simonovsky, Martin and Komodakis, Nikos},
   booktitle = CVPR,
   year      = {2017}
 }
+
 
 @inproceedings{Sinha2016,
   author    = {Ayan Sinha and Jing Bai and Karthik Ramani},
@@ -3084,7 +3103,6 @@
   year         = {2017}
 }
 
-
 @unpublished{Solomon2014,
   author = {Solomon, Justin and Crane, Keenan and Butscher, Adrian and Wojtan, Chris},
   title  = {A general framework for bilateral and mean shift filtering},
@@ -3100,6 +3118,7 @@
   year      = {2017}
 }
 
+
 @online{Song2019,
   author       = {Shuran Song},
   lassaccessed = {May 20, 2019},
@@ -3108,13 +3127,13 @@
   year         = {2019}
 }
 
-
 @inproceedings{Sorkine2004,
   author    = {Sorkine, O. and Cohen-Or, D. and Lipman, Y. and Alexa, M. and R\"{o}ssl, C. and Seidel, H.-P.},
   title     = {Laplacian surface editing},
   booktitle = SGPOLD,
   year      = {2004}
 }
+
 
 @article{Srivastava2014,
   author  = {Srivastava, Nitish and Hinton, Geoffrey E and Krizhevsky, Alex and Sutskever, Ilya and Salakhutdinov, Ruslan},
@@ -3180,7 +3199,6 @@
   number  = {3}
 }
 
-
 @article{Sun2009,
   author  = {Xianfang Sun and Paul L. Rosin and Ralph R. Martin and Frank C. Langbein},
   title   = {Noise analysis and synthesis for {3D} laser depth scanners},
@@ -3200,6 +3218,7 @@
   number       = {5},
   organization = {Eurographics Association}
 }
+
 
 @inproceedings{Sun2015,
   author    = {Xiao Sun and Yichen Wei and Shuang Liang and Xiaoou Tang and Jian Sun},
@@ -3263,7 +3282,6 @@
   year      = {2020}
 }
 
-
 @article{Tang2018,
   title   = {Real-time Compression and Streaming of {4D} Performances},
   author  = {Tang, Danhang and Dou, Mingsong and Lincoln, Peter and Davidson, Philip and Guo, Kaiwen and Taylor, Jonathan and Fanello, Sean and Keskin, Cem and Kowdle, Adarsh and Bouaziz, Sofien and others},
@@ -3280,6 +3298,7 @@
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @inproceedings{Tang2021,
   title     = {{OctField}: Hierarchical Implicit Functions for {3D} Modeling},
@@ -3325,7 +3344,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Taubin1995,
   author    = {Taubin, Gabriel},
   title     = {A signal processing approach to fair surface design},
@@ -3341,13 +3359,13 @@
   year      = 2019
 }
 
+
 @inproceedings{Tian2020,
   title     = {Contrastive multiview coding},
   author    = {Tian, Yonglong and Krishnan, Dilip and Isola, Phillip},
   booktitle = ECCV,
   year      = {2020}
 }
-
 
 @inproceedings{Tobin2017,
   title     = {Domain randomization for transferring deep neural networks from simulation to the real world},
@@ -3363,6 +3381,7 @@
   booktitle = ICCV,
   year      = {1998}
 }
+
 
 @inproceedings{Tulsiani2017,
   author    = {Tulsiani, Shubham and Zhou, Tinghui and Efros, Alexei A and Malik, Jitendra},
@@ -3385,13 +3404,13 @@
   year      = {2017}
 }
 
-
 @inproceedings{Ulyanov2018,
   title     = {Deep image prior},
   author    = {Ulyanov, Dmitry and Vedaldi, Andrea and Lempitsky, Victor},
   booktitle = CVPR,
   year      = {2018}
 }
+
 
 @inproceedings{Ummenhofer2021,
   title     = {Adaptive Surface Reconstruction With Multiscale Convolutional Kernels},
@@ -3416,7 +3435,6 @@
   year      = {2017}
 }
 
-
 @inproceedings{Velickovic2018,
   title     = {Graph Attention Networks},
   author    = {Veli{\v{c}}kovi{\'{c}}, Petar and Cucurull, Guillem and Casanova, Arantxa and Romero, Adriana and Li{\`{o}}, Pietro and Bengio, Yoshua},
@@ -3431,6 +3449,7 @@
   booktitle = ICML,
   year      = {2008}
 }
+
 
 @inproceedings{Wald2019,
   author    = {Wald, Johanna and Avetisyan, Armen and Navab, Nassir and Tombari, Federico and Nie{\ss}ner, Matthias},
@@ -3668,7 +3687,6 @@
   number  = {3}
 }
 
-
 @inproceedings{Williams2021,
   title     = {Neural splines: Fitting {3D} surfaces with infinitely-wide neural networks},
   author    = {Williams, Francis and Trager, Matthew and Bruna, Joan and Zorin, Denis},
@@ -3683,6 +3701,7 @@
   booktitle = CVPR,
   year      = {2022}
 }
+
 
 @article{Wu2005,
   author  = {Jianhua Wu and Leif Kobbelt},
@@ -3753,7 +3772,6 @@
   year      = {2019}
 }
 
-
 @article{Wu2020,
   title   = {A comprehensive survey on graph neural networks},
   author  = {Wu, Zonghan and Pan, Shirui and Chen, Fengwen and Long, Guodong and Zhang, Chengqi and Philip, S Yu},
@@ -3762,6 +3780,7 @@
   number  = {1},
   year    = {2020}
 }
+
 
 @inproceedings{Wu2021,
   title     = {{CvT}: Introducing convolutions to vision transformers},
@@ -3800,7 +3819,6 @@
   number  = {7}
 }
 
-
 @article{Xie2020,
   title   = {{PointContrast}: Unsupervised Pre-training for {3D} Point Cloud Understanding},
   author  = {Xie, Saining and Gu, Jiatao and Guo, Demi and Qi, Charles R. and Guibas, Leonidas J and Litany, Or},
@@ -3815,6 +3833,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @inproceedings{Xie2021,
   title     = {{Propagate Yourself}: Exploring Pixel-Level Consistency for Unsupervised Visual Representation Learning},
@@ -3894,7 +3913,6 @@
   year      = {2018}
 }
 
-
 @inproceedings{Xu2021,
   title     = {{PAConv}: Position Adaptive Convolution with Dynamic Kernel Assembling on Point Clouds},
   author    = {Xu, Mutian and Ding, Runyu and Zhao, Hengshuang and Qi, Xiaojuan},
@@ -3909,6 +3927,7 @@
   booktitle = {Geom. Model. and Proc.},
   year      = {2002}
 }
+
 
 @inproceedings{Yagou2003,
   author    = {Yagou, H. and Ohtake, Y. and Belyaev, A.G.},
@@ -3932,7 +3951,6 @@
   year      = {2016}
 }
 
-
 @article{Yan2020,
   title   = {{COVID-19} Chest {CT} Image Segmentation--A Deep Convolutional Neural Network Solution},
   author  = {Yan, Qingsen and Wang, Bo and Gong, Dong and Luo, Chuan and Zhao, Wei and Shen, Jianhu and Shi, Qinfeng and Jin, Shuo and Zhang, Liang and You, Zheng},
@@ -3947,6 +3965,7 @@
   booktitle = CVPR,
   year      = {2020}
 }
+
 
 @article{Yang2015,
   title   = {{Go-ICP}: A globally optimal solution to {3D ICP} point-set registration},
@@ -3964,13 +3983,13 @@
   year      = {2017}
 }
 
-
 @article{Yang2018,
   author  = {Yang, Bo and Rosa, Stefano and Markham, Andrew and Trigoni, Niki and Wen, Hongkai},
   title   = {Dense {3D} object reconstruction from a single depth view},
   journal = TPAMI,
   year    = {2018}
 }
+
 
 @inproceedings{Yang2018a,
   author    = {Yaoqing Yang and Chen Feng and Yiru Shen and Dong Tian},
@@ -3984,6 +4003,13 @@
   author  = {Yang, Lei and Liu, Wenxi and Cui, Zhiming and Chen, Nenglun and Wang, Wenping},
   journal = ECCV,
   year    = {2020}
+}
+
+@inproceedings{Yang2021,
+  title     = {Focal Self-attention for Local-Global Interactions in Vision Transformers},
+  author    = {Jianwei Yang and Chunyuan Li and Pengchuan Zhang and Xiyang Dai and Bin Xiao and Lu Yuan and Jianfeng Gao},
+  year      = {2021},
+  booktitle = NeurIPS
 }
 
 @article{Yi2016,
