--- a/reference.bib
+++ b/reference.bib
@@ -37,6 +37,7 @@
   year      = {2018}
 }
 
+
 @article{Adams2009,
   author  = {Adams, Andrew and Gelfand, Natasha and Dolson, Jennifer and Levoy, Marc},
   title   = {Gaussian {KD-trees} for fast high-dimensional filtering},
@@ -55,7 +56,6 @@
   volume  = {29},
   number  = {2}
 }
-
 
 @inproceedings{Adamson2003,
   author    = {Adamson, Anders and Alexa, Marc},
@@ -338,6 +338,7 @@
   year      = {2014}
 }
 
+
 @inproceedings{Bogo2017,
   title     = {Dynamic {FAUST}: Registering human bodies in motion},
   author    = {Bogo, Federica and Romero, Javier and Pons-Moll, Gerard and Black, Michael J},
@@ -354,7 +355,6 @@
   volume  = {28},
   number  = {3}
 }
-
 
 @article{Bommes2013,
   author  = {Bommes, David and Campen, Marcel and Ebke, Hans-Christian and Alliez, Pierre and Kobbelt, Leif},
@@ -375,6 +375,7 @@
   number  = {6}
 }
 
+
 @article{Boscaini2015,
   author  = {Boscaini, Davide and Masci, Jonathan and Melzi, Simone and Bronstein, Michael M and Castellani, Umberto and Vandergheynst, Pierre},
   title   = {Learning class-specific descriptors for deformable shapes using localized spectral convolutional networks},
@@ -391,7 +392,6 @@
   booktitle = NeurIPS,
   year      = {2016}
 }
-
 
 @article{Botsch2008,
   author  = {Botsch, Mario and Sorkine, Olga},
@@ -443,6 +443,7 @@
   year      = {2016}
 }
 
+
 @article{Bronstein2017,
   author  = {M. M. Bronstein and J. Bruna and Y. LeCun and A. Szlam and P. Vandergheynst},
   title   = {Geometric deep learning: Going beyond Euclidean data},
@@ -458,7 +459,6 @@
   year      = {2020}
 }
 
-
 @article{Bugliarello2021,
   title   = {Multimodal pretraining unmasked: A meta-analysis and a unified framework of vision-and-language {BERT}s},
   author  = {Bugliarello, Emanuele and Cotterell, Ryan and Okazaki, Naoaki and Elliott, Desmond},
@@ -467,12 +467,14 @@
   year    = {2021}
 }
 
+
 @inproceedings{Burger2012,
   author    = {Burger, H.C. and Schuler, C.J. and Harmeling, S.},
   title     = {Image denoising: Can plain neural networks compete with {BM3D}?},
   booktitle = CVPR,
   year      = {2012}
 }
+
 
 @article{Calakli2011,
   author  = {Calakli, Fatih and Taubin, Gabriel},
@@ -482,7 +484,6 @@
   volume  = {30},
   number  = {7}
 }
-
 
 @article{Canas2006,
   author  = {Ca\~{n}as, Guillermo D. and Gortler, Steven J.},
@@ -517,13 +518,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Chabra2020,
   title     = {Deep Local Shapes: Learning Local {SDF} Priors for Detailed {3D} Reconstruction},
   author    = {Chabra, Rohan and Lenssen, Jan Eric and Ilg, Eddy and Schmidt, Tanner and Straub, Julian and Lovegrove, Steven and Newcombe, Richard},
   booktitle = ECCV,
   year      = {2020}
 }
-
 
 @article{Chang2015,
   title   = {{ShapeNet}: An information-rich {3D} model repository},
@@ -532,7 +533,6 @@
   year    = {2015}
 }
 
-
 @inproceedings{Chang2017,
   author    = {Chang, Angel and Dai, Angela and Funkhouser, Thomas and Halber, Maciej and Niessner, Matthias and Savva, Manolis and Song, Shuran and Zeng, Andy and Zhang, Yinda},
   title     = {{Matterport3D}: Learning from {RGB-D} Data in Indoor Environments},
@@ -540,12 +540,14 @@
   year      = {2017}
 }
 
+
 @inproceedings{Chellapilla2006,
   author    = {Chellapilla, Kumar and Puri, Sidd and Simard, Patrice},
   title     = {High performance convolutional neural networks for document processing},
   booktitle = {International Conference on Frontiers in Handwriting Recognition (ICFHR)},
   year      = {2006}
 }
+
 
 @inproceedings{Chen1990,
   title     = {Shortest paths on a polyhedron},
@@ -623,7 +625,6 @@
   year      = {2020}
 }
 
-
 @inproceedings{Chen2021,
   author    = {Xinlei Chen and Kaiming He},
   title     = {Exploring Simple Siamese Representation Learning},
@@ -637,6 +638,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Cheng2022,
   title     = {{PatchFormer}: A versatile {3D} transformer based on patch attention},
@@ -696,7 +698,6 @@
   year      = {2021}
 }
 
-
 @article{Chuang2011,
   author  = {Chuang, Ming and Kazhdan, Michael},
   title   = {Interactive and anisotropic geometry processing using the screened Poisson equation},
@@ -715,6 +716,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Clarenz2000,
   author    = {Clarenz, Ulrich and Diewald, Udo and Rumpf, Martin},
   title     = {Anisotropic geometric diffusion in surface processing},
@@ -728,7 +730,6 @@
   journal = {arXiv preprint arXiv:1801.10130},
   year    = {2018}
 }
-
 
 @article{CohenSteiner2004,
   author  = {Cohen-Steiner, David and Alliez, Pierre and Desbrun, Mathieu},
@@ -744,6 +745,7 @@
   title  = {{Data-driven science --- Wikipedia{,}} The Free Encyclopedia},
   year   = {2018}
 }
+
 
 @article{Cornea2007,
   author  = {Cornea, Nicu D. and Silver, Deborah and Min, Patrick},
@@ -903,7 +905,6 @@
   year    = {2018}
 }
 
-
 @article{Ebke2013,
   author  = {Ebke, Hans-Christian and Bommes, David and Campen, Marcel and Kobbelt, Leif},
   title   = {{QEx}: robust quad mesh extraction},
@@ -921,6 +922,7 @@
   volume  = {33},
   number  = {6}
 }
+
 
 @article{ElOuafdi2008,
   author  = {El Ouafdi, A.F. and Ziou, D. and Krim, H.},
@@ -946,7 +948,6 @@
   year      = {2020}
 }
 
-
 @article{Erhan2010,
   author  = {Dumitru Erhan and Yoshua Bengio and Aaron Courville and Pierre-Antoine Manzagol and Pascal Vincent and Samy Bengio},
   title   = {Why does unsupervised pre-training help deep learning?},
@@ -955,7 +956,6 @@
   volume  = {11},
   number  = {19}
 }
-
 
 @article{Fan2010,
   author  = {Hanqi Fan and Yizhou Yu and Qunsheng Peng},
@@ -966,6 +966,7 @@
   number  = {2}
 }
 
+
 @inproceedings{Fan2017,
   author    = {Fan, Haoqiang and Su, Hao and Guibas, Leonidas},
   title     = {A point set generation network for {3D} object reconstruction from a single image},
@@ -973,13 +974,13 @@
   year      = {2017}
 }
 
+
 @inproceedings{Fan2022,
   title     = {Embracing single stride {3D} object detector with sparse transformer},
   author    = {Fan, Lue and Pang, Ziqi and Zhang, Tianyuan and Wang, Yu-Xiong and Zhao, Hang and Wang, Feng and Wang, Naiyan and Zhang, Zhaoxiang},
   booktitle = CVPR,
   year      = {2022}
 }
-
 
 @inproceedings{Fanello2014,
   author    = {Fanello, S.R. and Keskin, C. and Kohli, P. and Izadi, S. and Shotton, J. and Criminisi, A. and Pattacini, U. and Paek, T.},
@@ -995,13 +996,13 @@
   year      = {2018}
 }
 
+
 @inproceedings{Fey2019,
   title     = {Fast Graph Representation Learning with {PyTorch Geometric}},
   author    = {Fey, Matthias and Lenssen, Jan Eric},
   booktitle = {ICLR Workshop},
   year      = {2019}
 }
-
 
 @inproceedings{Firman2016,
   author    = {Michael Firman and Oisin Mac Aodha and Simon Julier and Gabriel J. Brostow},
@@ -1010,13 +1011,13 @@
   year      = {2016}
 }
 
-
 @article{Fish2014,
   author  = {Noa Fish and Melinos Averkiou and Oliver van Kaick and Olga Sorkine-Hornung and Daniel Cohen-Or and Niloy J. Mitra},
   title   = {Meta-representation of shape families},
   journal = SIG,
   year    = {2014}
 }
+
 
 @article{Fleishman2003,
   author  = {Fleishman, Shachar and Drori, Iddo and Cohen-Or, Daniel},
@@ -1026,6 +1027,7 @@
   volume  = {22},
   number  = {3}
 }
+
 
 @inproceedings{Frisken2000,
   author    = {Frisken, Sarah F. and Perry, Ronald N. and Rockwood, Alyn P. and Jones, Thouis R.},
@@ -1225,14 +1227,12 @@
   year    = {2021}
 }
 
-
 @inproceedings{Gupta2016,
   author    = {Gupta, Saurabh and Hoffman, Judy and Malik, Jitendra},
   booktitle = CVPR,
   title     = {Cross modal distillation for supervision transfer},
   year      = {2016}
 }
-
 
 @inproceedings{Guskov1999,
   author    = {Guskov, Igor and Sweldens, Wim and Schr\"{o}der, Peter},
@@ -1249,12 +1249,14 @@
   year      = {2010}
 }
 
+
 @inproceedings{Gwak2020,
   title     = {Generative sparse detection networks for {3D} single-shot object detection},
   author    = {Gwak, JunYoung and Choy, Christopher and Savarese, Silvio},
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @inproceedings{Ha2017,
   title     = {{HyperNetworks}},
@@ -1375,14 +1377,12 @@
   year      = {2016}
 }
 
-
 @inproceedings{He2016a,
   author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
   booktitle = ECCV,
   title     = {Identity mappings in deep residual networks},
   year      = {2016}
 }
-
 
 @inproceedings{He2018,
   author    = {He, Xinwei and Zhou, Yang and Zhou, Zhichao and Bai, Song and Bai, Xiang},
@@ -1391,12 +1391,14 @@
   year      = {2018}
 }
 
+
 @inproceedings{He2020,
   author    = {Kaiming He and Haoqi Fan and Yuxin Wu and Saining Xie and Ross Girshick},
   booktitle = CVPR,
   title     = {Momentum contrast for unsupervised visual representation learning},
   year      = {2020}
 }
+
 
 @inproceedings{He2022,
   author    = {Kaiming He and Xinlei Chen and Saining Xie and Yanghao Li and Piotr Doll{\'a}r and Ross Girshick},
@@ -1446,7 +1448,6 @@
   number  = {5}
 }
 
-
 @inproceedings{Hu2019,
   title   = {{RandLA-Net}: Efficient Semantic Segmentation of Large-Scale Point Clouds},
   author  = {Hu, Qingyong and Yang, Bo and Xie, Linhai and Rosa, Stefano and Guo, Yulan and Wang, Zhihua and Trigoni, Niki and Markham, Andrew},
@@ -1454,13 +1455,13 @@
   year    = {2020}
 }
 
-
 @inproceedings{Hu2020,
   title     = {{JSENet}: Joint semantic segmentation and edge detection network for 3d point clouds},
   author    = {Hu, Zeyu and Zhen, Mingmin and Bai, Xuyang and Fu, Hongbo and Tai, Chiew-lan},
   booktitle = ECCV,
   year      = {2020}
 }
+
 
 @article{Huang2006,
   author  = {Huang, Jin and Shi, Xiaohan and Liu, Xinguo and Zhou, Kun and Wei, Li-Yi and Teng, Shang-Hua and Bao, Hujun and Guo, Baining and Shum, Heung-Yeung},
@@ -1470,6 +1471,7 @@
   volume  = {25},
   number  = {3}
 }
+
 
 @article{Huang2011,
   author  = {Huang, Guang-Bin and Wang, Dian Hui and Lan, Yuan},
@@ -1642,7 +1644,6 @@
   number  = {6}
 }
 
-
 @article{Kaick2011a,
   author  = {Oliver van Kaick and Andrea Tagliasacchi and Oana Sidi and Hao Zhang and Daniel Cohen-Or and Lior Wolf and and Ghassan Hamarneh},
   title   = {Prior Knowledge for part correspondence},
@@ -1660,6 +1661,7 @@
   volume  = {32},
   number  = {4}
 }
+
 
 @article{Kalantari2015,
   author  = {Kalantari, Nima Khademi and Bako, Steve and Sen, Pradeep},
@@ -2061,7 +2063,6 @@
   year      = {2021}
 }
 
-
 @article{Liu2007,
   author  = {Ligang Liu and Chiew-Lan Tai and Zhongping Ji and Guojin Wang},
   title   = {Non-Iterative approach for global mesh optimization},
@@ -2077,6 +2078,7 @@
   booktitle = ECCV,
   year      = {2018}
 }
+
 
 @inproceedings{Liu2018a,
   title     = {See and think: Disentangling semantic scene completion},
@@ -2134,7 +2136,6 @@
   author  = {Qinqing Liu and Peng-Shuai Wang and Chunjiang Zhu and Blake Blumenfeld Gaines and Tan Zhu and Jinbo Bi and Minghu Song}
 }
 
-
 @inproceedings{Liu2021a,
   title     = {Swin transformer: Hierarchical vision transformer using shifted windows},
   author    = {Liu, Ze and Lin, Yutong and Cao, Yue and Hu, Han and Wei, Yixuan and Zhang, Zheng and Lin, Stephen and Guo, Baining},
@@ -2148,6 +2149,7 @@
   booktitle = CVPR,
   year      = {2021}
 }
+
 
 @inproceedings{Liu2021c,
   title     = {Contrastive Multimodal Fusion with {TupleInfoNCE}},
@@ -2163,7 +2165,6 @@
   year    = {2021}
 }
 
-
 @inproceedings{Liu2021e,
   author    = {Liu, Ze and Zhang, Zheng and Cao, Yue and Hu, Han and Tong, Xin},
   title     = {Group-Free 3D Object Detection via Transformers},
@@ -2178,13 +2179,13 @@
   year      = {2015}
 }
 
+
 @book{Logan2017,
   title     = {A first course in the finite element method},
   author    = {Logan, Daryl L},
   year      = {2017},
   publisher = {Nelson Education}
 }
-
 
 @inproceedings{Long2015,
   author    = {Jonathan Long and Evan Shelhamer and Trevor Darrell},
@@ -2193,13 +2194,13 @@
   year      = {2015}
 }
 
-
 @inproceedings{Lorensen1987,
   author    = {Lorensen, William E. and Cline, Harvey E.},
   title     = {{Marching Cubes}: A High Resolution {3D} Surface Construction Algorithm},
   booktitle = {SIGGRAPH},
   year      = {1987}
 }
+
 
 @inproceedings{Lowe1989,
   author    = {Lowe, David},
@@ -2225,13 +2226,13 @@
   year      = {2017}
 }
 
+
 @article{Lun2017a,
   author  = {Lun, Zhaoliang and Gadelha, Matheus and Kalogerakis, Evangelos and Maji, Subhransu and Wang, Rui},
   title   = {{3D} shape reconstruction from sketches via multi-view convolutional networks},
   journal = ThreeDV,
   year    = {2017}
 }
-
 
 @inproceedings{Lyu2020,
   author    = {Yecheng Lyu and Xinming Huang and Ziming Zhang},
@@ -2246,6 +2247,7 @@
   journal = {Journal of machine learning research},
   year    = {2008}
 }
+
 
 @inproceedings{Maes2010,
   author    = {Maes, C. and Fabry, T. and Keustermans, J. and Smeets, D. and Suetens, P. and Vandermeulen, D.},
@@ -2647,7 +2649,6 @@
   year    = {2016}
 }
 
-
 @inproceedings{Radford2016,
   author    = {Alec Radford and Luke Metz and Soumith Chintala},
   booktitle = ICLR,
@@ -2662,6 +2663,14 @@
   year        = {2018}
 }
 
+
+@inproceedings{Radford2021,
+  title     = {Learning transferable visual models from natural language supervision},
+  author    = {Radford, Alec and Kim, Jong Wook and Hallacy, Chris and Ramesh, Aditya and Goh, Gabriel and Agarwal, Sandhini and Sastry, Girish and Askell, Amanda and Mishkin, Pamela and Clark, Jack and others},
+  booktitle = ICML,
+  year      = {2021}
+}
+
 @article{Raffel2019,
   title   = {Exploring the Limits of Transfer Learning with a Unified Text-to-Text Transformer},
   author  = {Raffel, Colin and Shazeer, Noam and Roberts, Adam and Lee, Katherine and Narang, Sharan and Matena, Michael and Zhou, Yanqi and Li, Wei and Liu, Peter J},
@@ -2669,7 +2678,6 @@
   volume  = {21},
   year    = {2020}
 }
-
 
 @inproceedings{Rahaman2019,
   title     = {On the spectral bias of neural networks},
@@ -2685,6 +2693,7 @@
   booktitle = NeurIPS,
   year      = {2008}
 }
+
 
 @article{Rainer2019,
   author  = {Gilles Rainer and Wenzel Jakob and Abhijeet Ghosh and Tim Weyrich},
@@ -2702,6 +2711,13 @@
   volume  = 39,
   number  = 2,
   year    = 2020
+}
+
+@article{Ramesh2022,
+  title   = {Hierarchical text-conditional image generation with {CLIP} latents},
+  author  = {Ramesh, Aditya and Dhariwal, Prafulla and Nichol, Alex and Chu, Casey and Chen, Mark},
+  journal = {arXiv preprint arXiv:2204.06125},
+  year    = {2022}
 }
 
 @article{Raviv2010,
